<resources>

    <string name="app_name">InAndOut</string>
    <string name="app_id">613662932013591</string>
    
    <!-- Welcome Screen -->
    <string name="privacy_policy">privacy policy</string>
    <string name="terms">terms of use</string>
    <string name="login">Log in</string>
    <string name="register"><u>Register for an account</u></string>
    
    <!-- Home screen -->
    <string name="broadcast">Broadcast Message</string>
    <string name="my_homease">My Homease</string>
    <string name="invite_more">Invite someone to your Homease</string>
    
    <!--  Login screen -->
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="loginHomease">Login to Homease</string>
    <string name="or">- OR -</string>
    
    <!--  Register screen -->
    <string name="registerButton">Register</string>
    <string name="email">Email</string>
    <string name="confirmPassword">Confirm Password</string>
    
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="join">Join a house</string>
    <string name="create">Create a house</string>
    <string name="homename">name</string>
    <string name="address">address</string>
    <string name="wifiname">wifi name</string>
    <string name="wifitype">wifi type</string>
    <string name="wifipassword">wifi password</string>
    <string name="createButton">Create</string>
    <string name="leaveHome">Leave Home</string>

</resources>