<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
  	<EditText 
        android:id="@+id/housename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/homename" />
  	
  	<EditText 
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address" />
  	
  	<EditText 
        android:id="@+id/wifitype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/wifitype" />
  	
  	<EditText 
        android:id="@+id/wifiname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/wifiname" />
  	
  	<EditText 
        android:id="@+id/wifipassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/wifipassword" />
    
 	<Button
        android:id="@+id/createButton"
        style="@style/GreenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickCreate"
        android:text="@string/createButton"
        android:textColor="@color/white" />
</LinearLayout>
